# trdr

./: .coverage  .env  .env.example  .eslintrc.json  .flake8  .gitignore  .prettierrc.json  CLAUDE.md  LICENSE  PRD.md  PYTHON_ENV_GUIDE.md  README.md  alpaca_data_loader.py  backtest.sh  backtest_simulator.py  bar_aggregators.py  base_data_loader.py  colors.py  config.json  config_manager.py  data_pipeline.py  debug_metrics.py  dev.sh  eslint.config.mjs  example-pipeline.json  filename_utils.py  financial_metrics.py  finetune_v3.sh  genetic_algorithm.py  genetic_optimizer.py  indicators.py  interface-comparison.md  ma_strategy.py  main.py  matrix_profile_trading_system.md  mss_strategy.py  mypy.ini  optimize_ma_strategy_example.py  optimizer.py  package-lock.json  (+36 more)
helios/: .gitignore  COMMAND_LINE_USAGE.md  Helios Trader.md  Helois Trader.ipynb  LIVE_TRADER.md  README.md  UPDATES_SUMMARY.md  __init__.py  __main__.py  alpaca_client.py  args_types.py  compare_implementations.py  data_processing.py  example_usage.py  factors.py  factors_dynamic.py  generic_algorithm.py  good_manual_params.json  live_trader.py  live_trader_adaptive.py  main.py  optimization.py  performance.py  playbook.py  portfolio_tracker.py  pyproject.toml  ranges.py  run_adaptive.sh  run_live.sh  run_live_1min.sh  run_live_btc.sh  run_live_custom.sh  run_live_msft.sh  run_live_trader.sh  run_optimization_test.sh  single.py  strategy.py  strategy_enhanced.py  test_enhanced_strategy.py  test_fitness_comparison.py  (+5 more)
helios/colab/: helios-trader-new.py  helois-trader-new.ipynb  helois-trader-old.ipynb
(+593 files in other folders)
