[project]
name = "trdr"
version = "0.1.0"
description = "Volume Profile trading bot with Textual TUI"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.29.0",
    "textual>=0.85.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "pymoo>=0.6.0",
    "pandas>=2.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
trdr = "trdr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default)",
]
addopts = "-m 'not slow'"
